--- a/src/components/Backdrops/UrbanBackdrop.module.css
+++ b/src/components/Backdrops/UrbanBackdrop.module.css
@@ -5,7 +5,8 @@
   width: 100%;
   height: 100%;
   height: 100lvh;
-  z-index: 0; /* Changed back to 0 */
+  min-height: -webkit-fill-available;
+  z-index: 0;
   opacity: 0;
   pointer-events: none;
   will-change: opacity;
